# rinfo

./: Cargo.toml  README.md  build.rs  rustfmt.toml  wrapper.h
.github/workflows/: release.yml  rust.yml  test.yml
lib/: wrapper.h
lib/info/macos/: caller.c  caller.h  cpu.c  cpu.h
src/: main.rs
src/info/: common.rs  mod.rs
src/info/linux/: caller.rs  cpu.rs  memory.rs  mod.rs  operating_system.rs
src/info/macos/: caller.rs  cpu.rs  memory.rs  mod.rs
src/info/win/: caller.rs  cpu.rs  memory.rs  mod.rs
src/printing/: ascii_art.rs  mod.rs
