[package]
name = "qinfo_rs"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
toml = "0.7"
lazy_static = "1.4"
thiserror = "1.0"
libc = "0.2"
humansize = { version = "2.1", features = ["impl_style"] }
chrono-humanize   = "0.2"
chrono = "0.4"
unwind_safe = "0.1.0"

[dependencies.windows]
version = "0.44"
features = [
    "Win32_System",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_Networking_WinSock"
]
