[package]
name = "rinfo"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
toml = "0.7"
lazy_static = "1.4"
thiserror = "1.0"
libc = "0.2"
humansize = { version = "2.1", features = ["impl_style"] }
chrono-humanize   = "0.2"
chrono = "0.4"
structopt = "0.3.26"
dirs = "4.0.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.11.0"
wmi = "0.11.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = [
    "Win32_System",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_ToolHelp",
]
