[package]
name = "rinfo"
description = "Get basic information about your system from the command-line."
license = "Apache-2.0"
authors = ["Decator <decator.c@proton.me>"]
repository = "https://github.com/Sir-Bobert-II/rinfo"
version = "0.2.2"
edition = "2021"


[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
toml = "0.7"
lazy_static = "1.4"
thiserror = "1.0"
libc = "0.2"
humansize = { version = "2.1", features = ["impl_style"] }
chrono-humanize   = "0.2"
chrono = "0.4"
structopt = "0.3.26"
dirs = "4.0.0"
plist = "1.0"
regex = "1.7.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.11.0"
wmi = "0.11.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = [
    "Win32_System",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_ToolHelp",
]

[build-dependencies]
bindgen = "0.64"
cc = { version = "1.0", features = ["parallel"] }
glob = "*"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-unknown-linux-musl"]
